# cement-channel-detection

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
configs/: alignment.depth_grid.example.yaml  alignment.relbearing.example.yaml  alignment.relbearing_calibration.example.yaml  depth_level_baseline.example.yaml  depth_level_label.example.yaml  depth_level_manual_review.example.yaml  depth_level_refinement.example.yaml  label.cast_weak_v001.example.yaml  mvp4a_xsi_cast_correlation.example.yaml  mvp4b_label_quality_subsets.example.yaml  mvp4b_receiver_features.example.yaml  mvp4b_sample_table.example.yaml  mvp4b_simple_baseline.example.yaml  paths.local.example.yaml  paths.server.example.yaml  preprocess.yaml  raw_variable_mapping.example.yaml  xsi_geometry.example.yaml
data/: README.md
docs/: data_contract.md  depth_level_manual_review_checklist.md  depth_level_refinement_decision_pack.md  development_workflow.md  evaluation_protocol.md  experiment_protocol.md  labeling_protocol.md  mvp4b_no_go_review.md  report.md  server_runbook.md
logs/: README.md
models/: README.md
outputs/: README.md
scripts/: 00_check_env.py  01_build_manifest.py  01b_inspect_mat_metadata.py  01c_audit_raw_metadata.py  01d_probe_mat_structs.py  01e_suggest_raw_mapping.py  01f_read_small_slice.py  01g_build_tiny_hdf5.py  02_run_qc.py  02b_generate_mvp1_gate_report.py  03a_audit_depth_axes.py  03b_propose_depth_grid.py  03c_read_depth_only.py  03d_resample_depth_small_slice.py  03e_validate_angle_utils.py  03f_validate_relbearing_sign.py  03g_build_orientation_confidence.py  (+43 more)
(+190 files in other folders)
