[project]
name = "cement-channel-detection"
version = "0.1.0"
description = "Interpretable cement channeling detection from XSI and CAST logs"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
