[project]
name = "cement-channel-detection"
version = "0.1.0"
description = "Interpretable cement channeling detection from XSI and CAST logs"
requires-python = ">=3.10"
dependencies = ["h5py>=3.8", "pyyaml>=6.0", "scipy>=1.10"]

[project.optional-dependencies]
plotting = ["matplotlib>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
